@startuml Ticket Management System - Extended Class Diagram

left to right direction

package "User" {

  class UserController {
    -userService: UserService
    +getUser(id: Long): UserDTO
    +createUser(email: String, username: String): UserDTO
    +deleteUser(id: Long): void
    +updateUserConfig(id: Long, config: UserConfigDTO): void
  }

  class UserService {
    -userRepository: UserRepository
    -authService: AuthService
    +createUser(email: String, username: String): User
    +deleteUser(id: Long): void
    +getUser(id: Long): User
    +getUserConfig(id: Long): UserConfig
    +updateUserConfig(id: Long, config: UserConfig): void
    +hasAccessToUser(id: Long): Boolean
  }

  interface UserRepository {
    +findById(id: Long): User
    +save(user: User): User
    +delete(user: User): void
  }

  class UserModel {
    -id: Long
    -email: String
    -username: String
    -userConfig: UserConfigModel
  }

  class UserConfigModel {
    -id: Long
    -userId: Long
    -wipLimitTodo: Integer
    -wipLimitInProgress: Integer
  }
}

UserModel "1" *-- "1" UserConfigModel
UserModel <.. UserRepository
UserService ..> UserRepository
UserController ..> UserService

@enduml